--- a/popup.css
+++ b/popup.css
@@ -1,54 +1,52 @@
 .container {
-  width: 280px;
+  width: 380px;
   color: #314d3e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* margin: 10px; */
 }
 
 .title {
-  font-size: 14px;
+  font-size: 24px;
   font-weight: bold;
   padding: 8px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.textbox {
-  width: 100%;
-  font-size: 12px;
-  margin: 0;
-  padding: 0px 2px;
+.send_note_container p {
+  text-align: center;
+  font-size: 18px;
 }
 
-.textbox:focus {
-  outline: 0;
-  border-color: #66afe9;
+.send_note{
+  margin: -10px 5px 30px;
+  width: 350px;
+  height: 5em;
 }
 
-.bookmarks {
-  margin: 5px 5px;
-  padding: 3px;
+.buttonSection{
+  margin: 20px 10px;
 }
 
-.bookmark {
-  display: flex;
-  border-bottom-color: #00254d;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-radius: 0.8rem;
-  padding: 3px;
-  padding-bottom: 7px;
-  margin-bottom: 7px;
+#start-button{
+  /* align-items: center;
+  margin: 35px 10px 20px; */
+  display: block;
+  margin: 0 auto;
+  width: 300px;
 }
 
-.bookmark-title {
-  padding-left: 2px;
+.howDoYouKnow p{
+  text-align: center;
+  font-size: 18px;
 }
 
-.bookmark-controls img {
-  margin: 0 4px;
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-}
-
-.bookmark-controls {
-  flex: auto;
-  text-align: right;
+#howKnowSelect {
+  display: block;
+  margin: 0 auto;
+  margin-top: -10px;
 }
